--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "devDependencies": {
     "concurrently": "^8.2.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "^2.0.15",
+    "ai": "^5.0.15"
   }
 }
