test: add mock test for ai.services

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.15",
-    "ai": "^5.0.15"
+    "ai": "^5.0.15",
+    "openai": "^5.12.2"
   }
 }
