--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "main": "dist/server.js",
+  "main": "dist/api/src/server.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
@@ -9,7 +9,10 @@
   "dependencies": {
     "express": "^4.19.0",
     "mongoose": "^7.6.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@ai-sdk/openai": "^2.0.15",
+    "ai": "^5.0.15",
+    "openai": "^5.12.2"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
