--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   web:
     build: ./apps/web
     environment:
-      - API_URL=http://localhost:3000
+      - API_URL=http://api:3000
       - PORT=3030
     ports:
       - "3030:3030"
