refactor: work on bugs ranging from test to ci

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest --watch"
   },
+  "type": "module",
   "dependencies": {
     "express": "^4.19.0",
     "mongoose": "^7.6.0",
