--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
+    "module": "preserve",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "moduleResolution": "bundler"
   }
 }
